# PDA

./: .env.example  .gitignore  ACCESS_WEB_APP.md  Dockerfile.backend  INSTALL_TROUBLESHOOT.md  Makefile  NETWORK_ACCESS.md  QUICK_START.md  README.md  SETUP.md  START_BACKEND.ps1  START_BACKEND_SIMPLE.md  TEST.md  UPDATE_CORS.md  check_and_install.ps1  docker-compose.yml  install.ps1  install_backend_deps.ps1  pyproject.toml  requirements.txt  run_all.sh  run_audit.ps1  run_demo.ps1  run_dev.ps1  run_dev.sh  start_backend.bat
api/: index.py
backend/: auth.py  main.py  run.py
eval/: sample_prompts.yaml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
pda/: __init__.py  cli.py  config.py  guardrails.py
prompts/: buyer_sim.j2  content_pack.j2  content_pack_rag.j2  critic_verify.j2  eval_judge.j2  eval_rag_answer.j2  extract_facts.j2  factsheet_extract.j2  factsheet_fix_json.j2  gap_analysis.j2  llm_check_buyer_answerability.j2  llm_check_comparability.j2  llm_check_selection_guidance.j2  llm_check_trust_citation.j2  llm_check_use_case_coverage.j2  llm_ready_canonical.j2  llm_ready_faq.j2  llm_ready_preflight.j2  llm_ready_selection.j2  llm_ready_usecases.j2  score_rubric.j2  simulator_score_rubric.j2  web_content_comparisons.j2  web_content_faq.j2  web_content_landing.j2  web_content_seo.j2  web_content_usecases.j2
rubrics/: default.yaml
sample/: README.md
schemas_docs/: README.md
scripts/: generate_sample_brochure.py
tests/: conftest.py  test_chunker.py  test_content_pack.py  test_content_pack_rag.py  test_deterministic_checks.py  (+9 more)
(+73 files in other folders)
