[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pda"
version = "0.1.0"
description = "LLM Product Discoverability Auditor — audit PDF brochures and product pages for LLM-readiness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PDA" }]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.9",
    "pdfplumber>=0.10",
    "httpx>=0.25",
    "trafilatura>=1.6",
    "langchain-text-splitters>=0.2",
    "openai>=1.0",
    "anthropic>=0.18",
    "chromadb>=0.4",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "rich>=13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=2.2; extra == 'local-embeddings'",
]

[project.optional-dependencies]
local-embeddings = ["sentence-transformers>=2.2"]

[project.scripts]
pda = "pda.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pda*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
